--- a/index.html
+++ b/index.html
@@ -4,10 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Realty Agency</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-   
+<div class="wrapper">
+  
+
+
+
+
+  <!-- Header -->
+  <header class="header">
+    <nav class="nav">
+      <div class="container">
+        <div class="nav__menu">
+          <a class="nav__logo" href="#"><span>O</span>mah</a>
+          <ul class="nav__list">
+            <li class="nav__list-item">
+              <a href="#">Home</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#">About</a>
+            </li>
+            <li class="nav__list-item">
+              <a class="nav__accordion" href="#">Properties</a>
+            </li>
+            <li class="nav__list-item">
+              <a href="#">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <!-- End header -->
+
+
+
+
+
+
+
+
+
+
+
+</div>
 </body>
 </html>
