--- a/index.html
+++ b/index.html
@@ -25,15 +25,19 @@
           <ul class="nav__list">
             <li class="nav__list-item">
               <a href="#">Home</a>
+              <div class="nav__list-item--line"></div>
             </li>
             <li class="nav__list-item">
               <a href="#">About</a>
+              <div class="nav__list-item--line"></div>
             </li>
             <li class="nav__list-item">
               <a class="nav__accordion" href="#">Properties</a>
+              <div class="nav__list-item--line"></div>
             </li>
             <li class="nav__list-item">
               <a href="#">Contact</a>
+              <div class="nav__list-item--line"></div>
             </li>
           </ul>
         </div>
@@ -53,5 +57,6 @@
 
 
 </div>
+<script src="./js/elementWidth.js"></script>
 </body>
 </html>
