☘️ Dropdown menu (beta)

--- a/index.html
+++ b/index.html
@@ -32,8 +32,21 @@
               <div class="nav__list-item--line"></div>
             </li>
             <li class="nav__list-item">
-              <a class="nav__accordion" href="#">Properties</a>
+              <div class="list-item__dropdown">
+                <button class="list-item__dropbtn nav__accordion">Properties 
+                  <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown__content">
+                  <a href="#">Link 1</a>
+                  <a href="#">Link 2</a>
+                  <a href="#">Link 3</a>
+                </div>
+              </div> 
+
               <div class="nav__list-item--line"></div>
+
+
+
             </li>
             <li class="nav__list-item">
               <a href="#">Contact</a>
