☘️ Add ID for line

--- a/index.html
+++ b/index.html
@@ -23,33 +23,20 @@
         <div class="nav__menu">
           <a class="nav__logo" href="#"><span>O</span>mah</a>
           <ul class="nav__list">
-            <li class="nav__list-item">
-              <a href="#">Home</a>
+            <li id="parent__list" class="nav__list-item">
+              <a id="nav__list-item--home" class="nav__list-item-link" href="#">Home</a>
               <div class="nav__list-item--line"></div>
             </li>
-            <li class="nav__list-item">
-              <a href="#">About</a>
+            <li id="parent__list" class="nav__list-item">
+              <a id="nav__list-item--about" class="nav__list-item-link" href="#">About</a>
               <div class="nav__list-item--line"></div>
             </li>
-            <li class="nav__list-item">
-              <div class="list-item__dropdown">
-                <button class="list-item__dropbtn nav__accordion">Properties 
-                  <i class="fa fa-caret-down"></i>
-                </button>
-                <div class="dropdown__content">
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-              </div> 
-
+            <li id="parent__list" class="nav__list-item">
+              <a id="nav__list-item--properties" class="nav__list-item-link nav__accordion" href="#">Properties</a>
               <div class="nav__list-item--line"></div>
-
-
-
             </li>
-            <li class="nav__list-item">
-              <a href="#">Contact</a>
+            <li id="parent__list" class="nav__list-item">
+              <a id="nav__list-item--contact" class="nav__list-item-link" href="#">Contact</a>
               <div class="nav__list-item--line"></div>
             </li>
           </ul>
