--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
   <!-- Header -->
   <header class="header">
+    <!-- Menu -->
     <nav class="nav">
       <div class="container">
         <div class="nav__menu">
@@ -43,6 +44,25 @@
         </div>
       </div>
     </nav>
+    <!-- End Menu -->
+    <section class="hero">
+      <div class="container">
+        <div class="hero__inner">
+          <div class="hero__info">
+            <h1 class="hero__text">Temukan Hunian Keluarga Sesuai Keinginanmu</h1>
+            <p class="hero__desc">Menyediakan hunian bagi keluarga anda dengan varian pilihan dan lokasi yang strategis di kota anda dengan cara yang lebih mudah.</p>
+            <form class="hero__form" action="">
+              <input class="hero__form-input" placeholder="Search location, properties, residental group" type="text">
+              <button class="hero__form-btn">Search</button>
+            </form>
+          </div>
+          <div class="hero__img">
+
+          </div>
+        </div>
+      </div>
+    </section>
+
   </header>
   <!-- End header -->
 
