⚡Add description list + hero image

--- a/index.html
+++ b/index.html
@@ -48,16 +48,38 @@
     <section class="hero">
       <div class="container">
         <div class="hero__inner">
+          <!-- Hero text -->
           <div class="hero__info">
             <h1 class="hero__text">Temukan Hunian Keluarga Sesuai Keinginanmu</h1>
             <p class="hero__desc">Menyediakan hunian bagi keluarga anda dengan varian pilihan dan lokasi yang strategis di kota anda dengan cara yang lebih mudah.</p>
+            <!-- Search field -->
             <form class="hero__form" action="">
               <input class="hero__form-input" placeholder="Search location, properties, residental group" type="text">
               <button class="hero__form-btn">Search</button>
             </form>
-          </div>
-          <div class="hero__img">
+            <!-- End search field -->
 
+            <ul class="hero__list">
+              <li class="hero__list-item">
+                <p class="list__title">200<span>+</span></p>
+                <p class="list__desc">Residental grup telah bergabung</p>
+              </li>
+              <li class="hero__list-item">
+                <p class="list__title">10<span class="list__title--text">Tahun</span></p>
+                <p class="list__desc">Sudah berpengalaman </p>
+              </li>
+              <li class="hero__list-item">
+                <p class="list__title">999<span>+</span></p>
+                <p class="list__desc">Properti tersedia di berbagai Kota</p>
+              </li>
+            </ul>
+
+
+          </div>
+          <!-- End hero text -->
+
+          <div class="hero__img">
+            <img src="./images/hero-prewiev.png" alt="House">
           </div>
         </div>
       </div>
