⚡ Steps buy channel

--- a/index.html
+++ b/index.html
@@ -78,9 +78,11 @@
           </div>
           <!-- End hero text -->
 
+          <!-- Image -->
           <div class="hero__img">
             <img src="./images/hero-prewiev.png" alt="House">
           </div>
+          <!-- End image -->
         </div>
       </div>
     </section>
@@ -88,7 +90,38 @@
   </header>
   <!-- End header -->
 
-
+  <!-- Main -->
+  <main class="main">
+    <section class="steps-buy">
+      <div class="container">
+        <h1 class="title steps-buy__title">Tahapan Pembelian Properti yang Mudah dan Cepat</h1>
+        <ul class="buy-list">
+          <li class="buy-list__item">
+            <div class="buy-list__block">
+              <p class="buy-list__title">Pilih Properti</p>
+              <p class="buy-list__desc">Cari properti yang diinginkan sesuai dengan kriteria anda dan keluarga. Cara memilih properti yang bijak dapat anda baca lebih lanjut di sini</p>
+              <button class="buy-list__btn">Baca lebih Lanjut</button>
+            </div>
+          </li>
+          <li class="buy-list__item">
+            <div class="buy-list__block">
+              <p class="buy-list__title">Proses Booking</p>
+              <p class="buy-list__desc">Pembayaran dalam bentuk sejumlah uang sebagai komitmen memesan unit properti tertentu.</p>
+              <button class="buy-list__btn">Baca lebih Lanjut</button>
+            </div>
+          </li>
+          <li class="buy-list__item">
+            <div class="buy-list__block">
+              <p class="buy-list__title">KPR dan Sertifikasi</p>
+              <p class="buy-list__desc">Pembiayaan KPR untuk pembeli rumah dengan skema pembiayaan jika diperlukan dan dilanjutkan proses sertifkasi HGB.</p>
+              <button class="buy-list__btn">Baca lebih Lanjut</button>
+            </div>
+          </li>
+        </ul>
+      </div>  
+    </section>
+  </main>
+  <!-- End main -->
 
 
 
