⚡Add to steps buy count + mark

--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         <h1 class="title steps-buy__title">Tahapan Pembelian Properti yang Mudah dan Cepat</h1>
         <ul class="buy-list">
           <li class="buy-list__item">
+            <div class="buy-list__mark"></div>
+            <div class="buy-list__count">01</div>
             <div class="buy-list__block">
               <p class="buy-list__title">Pilih Properti</p>
               <p class="buy-list__desc">Cari properti yang diinginkan sesuai dengan kriteria anda dan keluarga. Cara memilih properti yang bijak dapat anda baca lebih lanjut di sini</p>
@@ -104,6 +106,8 @@
             </div>
           </li>
           <li class="buy-list__item">
+            <div class="buy-list__mark"></div>
+            <div class="buy-list__count">02</div>
             <div class="buy-list__block">
               <p class="buy-list__title">Proses Booking</p>
               <p class="buy-list__desc">Pembayaran dalam bentuk sejumlah uang sebagai komitmen memesan unit properti tertentu.</p>
@@ -111,6 +115,8 @@
             </div>
           </li>
           <li class="buy-list__item">
+            <div class="buy-list__mark"></div>
+            <div class="buy-list__count">03</div>
             <div class="buy-list__block">
               <p class="buy-list__title">KPR dan Sertifikasi</p>
               <p class="buy-list__desc">Pembiayaan KPR untuk pembeli rumah dengan skema pembiayaan jika diperlukan dan dilanjutkan proses sertifkasi HGB.</p>
