⚡Add dropdown menu

--- a/index.html
+++ b/index.html
@@ -33,8 +33,15 @@
               <div class="nav__list-item--line"></div>
             </li>
             <li id="parent__list" class="nav__list-item">
-              <a id="nav__list-item--properties" class="nav__list-item-link nav__accordion" href="#">Properties</a>
-              <div class="nav__list-item--line"></div>
+              <div id="nav__list-item--properties" class="nav__list-item-link nav-list__dropdown">
+                <button class="nav-list__dropbtn">Properties</button>
+                <div class="nav-list__dropdown-content">
+                  <a href="#">Lorem, ipsum.</a>
+                  <a href="#">Lorem</a>
+                  <a href="#">Lorem, ipsum.</a>
+                </div>
+                <div class="nav__list-item--line"></div>
+              </div> 
             </li>
             <li id="parent__list" class="nav__list-item">
               <a id="nav__list-item--contact" class="nav__list-item-link" href="#">Contact</a>
@@ -132,7 +139,7 @@
 
 
 
-
+  <button class="bb">vv</button>
 
 
 
