☘️ Fix dropdown menu

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
               <div class="nav__list-item--line"></div>
             </li>
             <li id="parent__list" class="nav__list-item">
-              <div id="nav__list-item--properties" class="nav__list-item-link nav-list__dropdown">
-                <button class="nav-list__dropbtn">Properties</button>
+              <div class="nav__list-item-link nav-list__dropdown">
+                <button id="nav__list-item--properties" class="nav-list__dropbtn">Properties</button>
                 <div class="nav-list__dropdown-content">
                   <a href="#">Lorem, ipsum.</a>
                   <a href="#">Lorem</a>
