⚡ Best Residence section

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <main class="main">
     <section class="steps-buy">
       <div class="container">
-        <h1 class="title steps-buy__title">Tahapan Pembelian Properti yang Mudah dan Cepat</h1>
+        <h2 class="title steps-buy__title">Tahapan Pembelian Properti yang Mudah dan Cepat</h1>
         <ul class="buy-list">
           <li class="buy-list__item">
             <div class="buy-list__mark"></div>
@@ -133,13 +133,40 @@
         </ul>
       </div>  
     </section>
+
+    <!-- Best Residence -->
+    <section class="best-residence">
+      <div class="container">
+        <p class="realtor-name">Pilihan konsumen</p>
+        <h2 class="title best-residence__title">Residen Favorit</h2>
+
+        <!-- Content inner -->
+        <div class="best-residence__content-inner">
+          <div class="best-residence__images">
+            <img class="best-residence__image-first" src="./images/best-resident-first.png" alt="">
+            <img class="best-residence__image-second" src="./images/best-resident-second.png" alt="">
+          </div>
+          <div class="best-residence__content">
+            <h3 class="title best-residence__content-title">Bangunan yang dirancang oleh Aristektur Handal</h3>
+            <p class="best-residence__desc">Tanpa diragukan, properti yang disediakan dalam webiste kami merupakan hasil kerjasama secara profesional dengan para Arsitektur ternama dan Developer yang terpercaya.</p>
+
+            <div class="best-residence__btns">
+              <button class="best-residence__contact-btn">Hubungi Kami</button>
+              <button class="best-residence__check-more">Explore lebih banyak</button>
+            </div>
+
+          </div>
+        </div>
+        <!-- End content inner -->
+      </div>
+    </section>
+    <!-- End best residence -->
   </main>
   <!-- End main -->
 
 
 
 
-  <button class="bb">vv</button>
 
 
 
