⚡ House list section

--- a/index.html
+++ b/index.html
@@ -161,6 +161,38 @@
       </div>
     </section>
     <!-- End best residence -->
+
+    <!-- House list -->
+    <section class="house-list">
+      <div class="container">
+        <p class="house-list__desc">Pilihan konsumen</p>
+        <h2 class="title house-list__title">Residen Berbagai Kota</h2>
+
+        <!-- Slider content -->
+        <ul class="house-list__slider">
+          <li class="house-item">
+            <img class="house-item__img" src="./images/magnolia-house.png" alt="House in Magnolia Surabaya">
+            <h4 class="house-item__title">Magnolia Surabaya</h4>
+            <p class="house-item__desc">Jl. Gatot Subroto No.KM.6,8, RT.001/RW.008, Jatake, Kec. Jatiuwung, Kota Tangerang, Banten 15136</p>
+          </li>
+          <li class="house-item">
+            <img class="house-item__img" src="./images/pinang-house.png" alt="House in Pinang Residences">
+            <h4 class="house-item__title">Pinang Residences</h4>
+            <p class="house-item__desc">Jl. Deplu Raya No.16 RT.5, RW.003
+              Bintaro, Pesanggrahan, Jakarta Selatan 12330</p>
+          </li>
+          <li class="house-item">
+            <img class="house-item__img" src="./images/grove-house.png" alt="House in South Grove">
+            <h4 class="house-item__title">South Grove</h4>
+            <p class="house-item__desc">1 No.1, RT.1/RW.1, Lb. Bulus, Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12440</p>
+          </li>
+        </ul>
+
+      </div>
+    </section>
+    <!-- End House list -->
+
+
   </main>
   <!-- End main -->
 
