--- a/index.html
+++ b/index.html
@@ -192,6 +192,48 @@
     </section>
     <!-- End House list -->
 
+    <!-- Contact section -->
+    <section class="contacts">
+      <div class="container">
+
+
+        <div class="contacts__inner">
+
+          <div class="contacts-list">
+            <h2 class="contacts__title title">Hubungi Kami</h2>
+            <div class="contacts__call">
+              <img src="./images/call.svg" alt="">
+              <div class="call__interaction">
+                <p class="call__subtitle">Call</p>
+                <a class="call__number" href="tel:+6281232936733">+6281232936733</a>
+              </div>
+              <a class="call__link" href="#">Call Now</a>
+            </div>
+            <!-- <div class="contacts__email-block">
+              <img src="./images/email.svg" alt="">
+              <p class="email__subtitle">Email</p>
+              <a class="email__number" href="email:omahindev@gmail.com">omahindev@gmail.com</a>
+              <a class="email__link" href="#">Email Now</a>
+            </div> -->
+
+          </div>
+
+
+          <div class="awards">
+            <h2 class="awards__title title">Penghargaan</h2>
+            <div class="awards__content">
+              <a href="#">
+                <img src="./images/property-guru.png" alt="">
+              </a>
+              <a href="#">
+                <img src="./images/property-awards.png" alt="">
+              </a>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
 
   </main>
   <!-- End main -->
