--- a/index.html
+++ b/index.html
@@ -209,12 +209,14 @@
               </div>
               <a class="call__link" href="#">Call Now</a>
             </div>
-            <!-- <div class="contacts__email-block">
+            <div class="contacts__email">
               <img src="./images/email.svg" alt="">
-              <p class="email__subtitle">Email</p>
-              <a class="email__number" href="email:omahindev@gmail.com">omahindev@gmail.com</a>
+              <div class="email__interaction">
+                <p class="email__subtitle">Email</p>
+                <a class="email__number" href="email:omahindev@gmail.com">omahindev@gmail.com</a>
+              </div>
               <a class="email__link" href="#">Email Now</a>
-            </div> -->
+            </div>
 
           </div>
 
